--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
 <h3>
 <a name="demo" class="anchor" href="#demo"><span class="octicon octicon-link"></span></a>Demo</h3>
 
-<p>Coming soon...</p>
+<iframe width="620" height="400" src="browser-desktop/game.html" style="display:block;border:0;margin:0 auto;"></iframe>
+
+<p>
+  <em>Use mouse wheel to zoom in/out and click-and-drag to move the map.</em>
+</p>
 
 <h3>
 <a name="example" class="anchor" href="#example"><span class="octicon octicon-link"></span></a>Example</h3>
