Added links to Game Closure and OSM websites

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h3>
 <a name="what-is-it" class="anchor" href="#what-is-it"><span class="octicon octicon-link"></span></a>What is it?</h3>
 
-<p>This is a lightweight library that shows a map with basic features like zooming, moving and adding markers. It uses the Open Street Map API.</p>
+<p>This is a lightweight library for <a href="http://www.gameclosure.com/">Game Closure</a> that shows a map with basic features like zooming, moving and adding markers. It uses the <a href="http://www.openstreetmap.org/">Open Street Map</a> API.</p>
 
 <h3>
 <a name="demo" class="anchor" href="#demo"><span class="octicon octicon-link"></span></a>Demo</h3>
